chore(files): removed find files method (#23)